AutoComplete for card entry
There is a bug with pressing Enter on the AutoComplete after selecting a suggestion. It should submit, but does not.

--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fontsource/patua-one": "^5.0.18",
+    "fuse.js": "^7.0.0",
     "pinia": "^2.1.7",
     "primevue": "^3.45.0"
   }
