--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@fontsource/medula-one": "^5.0.8",
     "@fontsource/patua-one": "^5.0.18",
     "fuse.js": "^7.0.0",
     "pinia": "^2.1.7",
