--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.9.0",
     "nuxt-primevue": "^0.2.2",
