--- a/site/package.json
+++ b/site/package.json
@@ -22,6 +22,7 @@
     "@fontsource/medula-one": "^5.0.8",
     "@fontsource/patua-one": "^5.0.18",
     "@nuxt/content": "^2.10.0",
+    "@nuxtjs/plausible": "^0.2.4",
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "pinia": "^2.1.7",
