--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/nuxt": "^10.7.2",
     "nuxt": "^3.9.0",
     "nuxt-primevue": "^0.2.2",
     "sass": "^1.69.5",
