--- a/site/package.json
+++ b/site/package.json
@@ -11,10 +11,12 @@
     "deploy": "rsync -avz --delete .output/* $npm_config_gordianbla_deploy_path"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.9.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
+    "eslint": "^8.57.0",
     "mongoose": "^8.1.0",
     "nuxt": "^3.8.2",
     "nuxt-primevue": "^0.2.2",
